Element_Project/src/objects/Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HTTP_Status_Code__c</fullName>
        <label>HTTP Status Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Time__c</fullName>
        <label>Log Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Error_Log</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Error_Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>